--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
-    implementation 'com.googlecode.json-simple:json-simple:1.1'
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.7.3'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.7.3'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.7.3'
+    implementation 'com.google.code.gson:gson:2.2.3'
 }
